
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int dprintf (char*) ;
 int fork_shell () ;
 int is_root () ;

void check_root() {
 dprintf("[.] checking if we got root\n");

 if (!is_root()) {
  dprintf("[-] something went wrong =(\n");
  return;
 }

 dprintf("[+] got r00t ^_^\n");



 fork_shell();
}
